--- a/Front_Estoque/src/app/components/produtos/produtos.component.html
+++ b/Front_Estoque/src/app/components/produtos/produtos.component.html
@@ -7,6 +7,7 @@
   <hr />
   <table class="table table-striped table-hover table-sm" *ngIf="produtos">
     <tr class="thead-ligth">
+      <th>#</th>
       <th>Nome</th>
       <th>Categoria</th>
       <th>Preço</th>
@@ -14,9 +15,11 @@
     </tr>
 
       <tr *ngFor="let produto of produtos">
-        <td>{{produto.Nome}}</td>
-        <td>{{produto.Categoria}}</td>
-        <td>{{produto.Preco}}</td>
+        <td>{{produto.produtoId}}</td>
+        <td>{{produto.nome}}</td>
+        <td>{{produto.categoria}}</td>
+        <td>{{produto.preco}}</td>
+
         <td>
           <button type="button" class="btn btn-sm btn-outline-info">Atualizar</button>
           <button type="button" class="btn btn-sm btn-outline-info">Excluir</button>
