Criando o cadastro com angular

--- a/Front_Estoque/src/app/app.component.html
+++ b/Front_Estoque/src/app/app.component.html
@@ -1,3 +1,5 @@
-<a routerLink="produto/listar">Listar Produtos</a>
+<a routerLink="produto/listar">Listar produtos</a>
+<br>
+<a routerLink="produto/cadastrar">Cadastrar produtos</a>
 
 <router-outlet></router-outlet>
