--- a/Front_Estoque/src/app/components/cadastrar-produtos/cadastrar-produtos.component.html
+++ b/Front_Estoque/src/app/components/cadastrar-produtos/cadastrar-produtos.component.html
@@ -1,1 +1,17 @@
-<p>cadastrar-produtos works!</p>
+<h2>Cadastrar produto</h2>
+
+<div id="valor">
+    <label for="txtNome">Nome</label>
+    <input type="text" id="txtNome" [(ngModel)]="nome" />
+</div>
+<div id="categoria">
+    <label for="txtCategoria">Categoria</label>
+    <input type="text" id="txtCategoria" [(ngModel)]="categoria" />
+</div>
+<div id="preco">
+    <label for="txtPreco">Preço</label>
+    <input type="number" id="txtPreco" [(ngModel)]="preco" />
+</div>
+<div id="botao">
+    <button id="btnCadastrar" (click)="cadastrar()">Cadastrar</button>
+</div>
