--- a/Front_Estoque/src/app/components/cadastrar-produtos/cadastrar-produtos.component.html
+++ b/Front_Estoque/src/app/components/cadastrar-produtos/cadastrar-produtos.component.html
@@ -12,6 +12,7 @@
     <label for="txtPreco">Preço</label>
     <input type="number" id="txtPreco" [(ngModel)]="preco" />
 </div>
-<div id="botao">
-    <button id="btnCadastrar" (click)="cadastrar()">Cadastrar</button>
+<div id="botoes">
+    <button mat-raised-button color="warn" *ngIf="!id" id="btnCadastrar" (click)="cadastrar()">Cadastrar</button>
+    <button mat-raised-button color="warn" *ngIf="id" id="btnAlterar" (click)="alterar()">Salvar</button>
 </div>
