Dando aquele style

--- a/Front_Estoque/src/app/app.component.html
+++ b/Front_Estoque/src/app/app.component.html
@@ -1,5 +1,4 @@
-<a routerLink="produto/listar">Listar produtos</a>
-<br>
-<a routerLink="produto/cadastrar">Cadastrar produtos</a>
+<a routerLink="produto/listar" class="btn btn-sm btn-secondary">Listar produtos</a>
+<a routerLink="produto/cadastrar" class="btn btn-sm btn-secondary">Cadastrar produtos</a>
 
 <router-outlet></router-outlet>
