--- a/Front_Estoque/src/app/components/cadastrar-produtos/cadastrar-produtos.component.html
+++ b/Front_Estoque/src/app/components/cadastrar-produtos/cadastrar-produtos.component.html
@@ -1,18 +1,39 @@
-<h2>Cadastrar produto</h2>
 
-<div id="valor">
-    <label for="txtNome">Nome</label>
-    <input type="text" id="txtNome" [(ngModel)]="nome" />
+<div class="container p-5">
+
+  <div class="row">
+
+
+    <div class="col-6 border boder-ligth rounded p-5 shadow">
+      <h3>Cadastrar produto</h3>
+      <hr />
+      <div id="valor" class="form-group" >
+    <label for="txtNome">Nome:</label>
+    <input type="text" id="txtNome" class="form-control form-control-sm" [(ngModel)]="nome" />
 </div>
-<div id="categoria">
-    <label for="txtCategoria">Categoria</label>
-    <input type="text" id="txtCategoria" [(ngModel)]="categoria" />
+<div id="categoria" class="form-group">
+    <label for="txtCategoria">Categoria:</label>
+    <input type="text" class="form-control form-control-sm" id="txtCategoria" [(ngModel)]="categoria" />
 </div>
-<div id="preco">
-    <label for="txtPreco">Preço</label>
-    <input type="number" id="txtPreco" [(ngModel)]="preco" />
+<div id="preco" class="form-group">
+    <label for="txtPreco">Preço:</label>
+    <input type="number" class="form-control form-control-sm" id="txtPreco" [(ngModel)]="preco" />
 </div>
+<br>
 <div id="botoes">
     <button mat-raised-button color="warn" *ngIf="!id" id="btnCadastrar" (click)="cadastrar()">Cadastrar</button>
+    <button mat-raised-button color="blue" *ngIf="!id" id="btnCadastrar">Voltar</button>
+    <hr />
     <button mat-raised-button color="warn" *ngIf="id" id="btnAlterar" (click)="alterar()">Salvar</button>
+
 </div>
+
+<div>
+
+</div>
+    </div>
+
+  </div>
+
+</div>
+
