Iniciando a listagem de Estoques

--- a/Front_Estoque/src/app/app.component.html
+++ b/Front_Estoque/src/app/app.component.html
@@ -1,4 +1,6 @@
 <a routerLink="produto/listar" class="btn btn-sm btn-secondary">Listar produtos</a>
 <a routerLink="produto/cadastrar" class="btn btn-sm btn-secondary">Cadastrar produtos</a>
+<a routerLink="estoque/listar" class="btn btn-sm btn-secondary">Listar estoques</a>
+<a routerLink="estoque/cadastrar" class="btn btn-sm btn-secondary">Cadastrar estoques</a>
 
 <router-outlet></router-outlet>
